osd: Check for and automatically repair object info soid during scrub

Fixes: http://tracker.ceph.com/issues/20471

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 22f4d0cc010c5887b52847f050a361bc1ac20e40)